--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,3 +1,9 @@
 #new-create-topic {
     padding: 17px 0.5em 16px 0.5em !important;
 }
+
+.topic-area {
+    #new-create-topic {
+    	margin-top: -58px !important;
+    }
+}
